cmake_minimum_required(VERSION 2.8.4)
project(BinaryTree)

include_directories("library")
link_directories("library")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -g -I. -L. -Wall -Werror")

# Add test Examples below.
add_executable(examples/Example1.out examples/Example1.cpp)
add_executable(examples/Example2.out examples/Example2.cpp)
add_executable(examples/Example3.out examples/Example3.cpp)
add_executable(examples/Example4.out examples/Example4.cpp)
add_executable(examples/Example5.out examples/Example5.cpp)
add_executable(examples/Example6.out examples/Example6.cpp)
add_executable(examples/Example7.out examples/Example7.cpp)
add_executable(examples/Example8.out examples/Example8.cpp)
add_executable(examples/Example9.out examples/Example9.cpp)
add_executable(examples/Example10.out examples/Example10.cpp)
add_executable(examples/Example11.out examples/Example11.cpp)
add_executable(examples/Example12.out examples/Example12.cpp)
add_executable(examples/Example13.out examples/Example13.cpp)
add_executable(examples/Example14.out examples/Example14.cpp)
add_executable(examples/Example15.out examples/Example15.cpp)
add_executable(examples/Example16.out examples/Example16.cpp)
add_executable(examples/Example17.out examples/Example17.cpp)
add_executable(examples/Example18.out examples/Example18.cpp)
add_executable(examples/Example19.out examples/Example19.cpp)

# All 10 examples in set1.
add_executable(set1/diameter.out set1/diameter.cpp)
add_executable(set1/sumtree.out set1/sumtree.cpp)
add_executable(set1/levelordertraversal.out set1/levelordertraversal.cpp)
add_executable(set1/zigzagtraversal.out set1/zigzagtraversal.cpp)
add_executable(set1/lca.out set1/lca.cpp)
add_executable(set1/issubtree.out set1/issubtree.cpp)
add_executable(set1/contains.out set1/contains.cpp)
add_executable(set1/contains2.out set1/contains2.cpp)
add_executable(set1/invert.out set1/invert.cpp)
add_executable(set1/symmetric.out set1/symmetric.cpp)

# All 10 examples in set2.
add_executable(set2/siblings.out set2/siblings.cpp)
add_executable(set2/nosiblings.out set2/nosiblings.cpp)
add_executable(set2/rootleaf.out set2/rootleaf.cpp)
add_executable(set2/cousins.out set2/cousins.cpp)
add_executable(set2/mindepth.out set2/mindepth.cpp)
add_executable(set2/leftrightleafsum.out set2/leftrightleafsum.cpp)
add_executable(set2/deepest_oddlevel_leaf.out set2/deepest_oddlevel_leaf.cpp)
add_executable(set2/largestbst.out set2/largestbst.cpp)
add_executable(set2/bstkeyremoval.out set2/bstkeyremoval.cpp)
add_executable(set2/removehalfnodes.out set2/removehalfnodes.cpp)

# All 10 examples in set3.
add_executable(set3/topview.out set3/topview.cpp)
add_executable(set3/bottomview.out set3/bottomview.cpp)
add_executable(set3/leftview.out set3/leftview.cpp)
add_executable(set3/rightview.out set3/rightview.cpp)
add_executable(set3/periphery.out set3/periphery.cpp)
add_executable(set3/nonperiphery.out set3/nonperiphery.cpp)

# All linking section.
target_link_libraries(examples/Example1.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example2.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example3.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example4.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example5.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example6.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example7.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example8.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example9.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example10.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example11.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example12.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example13.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example14.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example15.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example16.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example17.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example18.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example19.out BinaryTree boost_iostreams)

# All linking section for set1 examples.
target_link_libraries(set1/diameter.out BinaryTree boost_iostreams)
target_link_libraries(set1/sumtree.out BinaryTree boost_iostreams)
target_link_libraries(set1/levelordertraversal.out BinaryTree boost_iostreams)
target_link_libraries(set1/zigzagtraversal.out BinaryTree boost_iostreams)
target_link_libraries(set1/lca.out BinaryTree boost_iostreams)
target_link_libraries(set1/issubtree.out BinaryTree boost_iostreams)
target_link_libraries(set1/contains.out BinaryTree boost_iostreams)
target_link_libraries(set1/contains2.out BinaryTree boost_iostreams)
target_link_libraries(set1/invert.out BinaryTree boost_iostreams)
target_link_libraries(set1/symmetric.out BinaryTree boost_iostreams)

# All linking section for set2 examples.
target_link_libraries(set2/siblings.out BinaryTree boost_iostreams)
target_link_libraries(set2/nosiblings.out BinaryTree boost_iostreams)
target_link_libraries(set2/rootleaf.out BinaryTree boost_iostreams)
target_link_libraries(set2/cousins.out BinaryTree boost_iostreams)
target_link_libraries(set2/mindepth.out BinaryTree boost_iostreams)
target_link_libraries(set2/leftrightleafsum.out BinaryTree boost_iostreams)
target_link_libraries(set2/deepest_oddlevel_leaf.out BinaryTree boost_iostreams)
target_link_libraries(set2/largestbst.out BinaryTree boost_iostreams)
target_link_libraries(set2/bstkeyremoval.out BinaryTree boost_iostreams)
target_link_libraries(set2/removehalfnodes.out BinaryTree boost_iostreams)

# All linking section for set3 examples.
target_link_libraries(set3/topview.out BinaryTree boost_iostreams)
target_link_libraries(set3/bottomview.out BinaryTree boost_iostreams)
target_link_libraries(set3/leftview.out BinaryTree boost_iostreams)
target_link_libraries(set3/rightview.out BinaryTree boost_iostreams)
target_link_libraries(set3/periphery.out BinaryTree boost_iostreams)
target_link_libraries(set3/nonperiphery.out BinaryTree boost_iostreams)
