cmake_minimum_required(VERSION 2.8.4)
project(BinaryTree)

include_directories("library")
link_directories("library")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -g -I. -I/home/anand/git/CyclicBarrier -L. -L/home/anand/git/CyclicBarrier -Wall -Werror")

# Generate shared library libBinaryTree.so file.
ADD_LIBRARY(BinaryTree SHARED BinaryTree.cpp BinarySearchTree.cpp AVLTree.cpp)

# Add test Examples below.
add_executable(examples/Example1.out examples/Example1.cpp)
add_executable(examples/Example2.out examples/Example2.cpp)
add_executable(examples/Example3.out examples/Example3.cpp)
add_executable(examples/Example4.out examples/Example4.cpp)
add_executable(examples/Example5.out examples/Example5.cpp)
add_executable(examples/Example6.out examples/Example6.cpp)
add_executable(examples/Example7.out examples/Example7.cpp)
add_executable(examples/Example8.out examples/Example8.cpp)
add_executable(examples/Example9.out examples/Example9.cpp)
add_executable(examples/Example10.out examples/Example10.cpp)
add_executable(examples/Example11.out examples/Example11.cpp)
add_executable(examples/Example12.out examples/Example12.cpp)
add_executable(examples/Example13.out examples/Example13.cpp)
add_executable(examples/Example14.out examples/Example14.cpp)
add_executable(examples/Example15.out examples/Example15.cpp)
add_executable(examples/Example16.out examples/Example16.cpp)
add_executable(examples/Example17.out examples/Example17.cpp)
add_executable(examples/Example18.out examples/Example18.cpp)
add_executable(examples/Example19.out examples/Example19.cpp)
add_executable(examples/Example20.out examples/Example20.cpp)
add_executable(examples/Example21.out examples/Example21.cpp)

# All 10 examples in set1.
add_executable(set1/diameter.out set1/diameter.cpp)
add_executable(set1/sumtree.out set1/sumtree.cpp)
add_executable(set1/levelordertraversal.out set1/levelordertraversal.cpp)
add_executable(set1/zigzagtraversal.out set1/zigzagtraversal.cpp)
add_executable(set1/lca.out set1/lca.cpp)
add_executable(set1/issubtree.out set1/issubtree.cpp)
add_executable(set1/contains.out set1/contains.cpp)
add_executable(set1/contains2.out set1/contains2.cpp)
add_executable(set1/invert.out set1/invert.cpp)
add_executable(set1/symmetric.out set1/symmetric.cpp)
add_executable(set1/reverseinorder.out set1/reverseinorder.cpp)

# All 10 examples in set2.
add_executable(set2/siblings.out set2/siblings.cpp)
add_executable(set2/nosiblings.out set2/nosiblings.cpp)
add_executable(set2/rootleaf.out set2/rootleaf.cpp)
add_executable(set2/cousins.out set2/cousins.cpp)
add_executable(set2/mindepth.out set2/mindepth.cpp)
add_executable(set2/leftrightleafsum.out set2/leftrightleafsum.cpp)
add_executable(set2/deepest_oddlevel_leaf.out set2/deepest_oddlevel_leaf.cpp)
add_executable(set2/largestbst.out set2/largestbst.cpp)
add_executable(set2/bstkeyremoval.out set2/bstkeyremoval.cpp)
add_executable(set2/removehalfnodes.out set2/removehalfnodes.cpp)

# All 10 examples in set3.
add_executable(set3/topview.out set3/topview.cpp)
add_executable(set3/bottomview.out set3/bottomview.cpp)
add_executable(set3/leftview.out set3/leftview.cpp)
add_executable(set3/rightview.out set3/rightview.cpp)
add_executable(set3/periphery.out set3/periphery.cpp)
add_executable(set3/nonperiphery.out set3/nonperiphery.cpp)
add_executable(set3/grandparents.out set3/grandparents.cpp)
add_executable(set3/grandchildren.out set3/grandchildren.cpp)
add_executable(set3/nogpnorgc.out set3/nogpnorgc.cpp)
add_executable(set3/verticaltraversal.out set3/verticaltraversal.cpp)

# All 10 examples in set4.
add_executable(set4/brokenbst.out set4/brokenbst.cpp)
add_executable(set4/inordersuccessor.out set4/inordersuccessor.cpp)
add_executable(set4/inorderpredecessor.out set4/inorderpredecessor.cpp)
add_executable(set4/floorceil.out set4/floorceil.cpp)
add_executable(set4/diagonalsum.out set4/diagonalsum.cpp)
add_executable(set4/auxdiagonalsum.out set4/auxdiagonalsum.cpp)
add_executable(set4/descendinginorder.out set4/descendinginorder.cpp)
add_executable(set4/bt2bst.out set4/bt2bst.cpp)
add_executable(set4/reverseBST.out set4/reverseBST.cpp)
add_executable(set4/pathlenlessk.out set4/pathlenlessk.cpp)

# All 10 examples in set5.
add_executable(set5/pathsumlessk.out set5/pathsumlessk.cpp)
add_executable(set5/maxwidth.out set5/maxwidth.cpp)
add_executable(set5/cornernodes.out set5/cornernodes.cpp)
add_executable(set5/rmhalfnode2fullbt.out set5/rmhalfnode2fullbt.cpp)
add_executable(set5/sinkzeronodes.out set5/sinkzeronodes.cpp)
add_executable(set5/iterativepreorder.out set5/iterativepreorder.cpp)
add_executable(set5/iterativeinorder.out set5/iterativeinorder.cpp)
add_executable(set5/iterativepostorder.out set5/iterativepostorder.cpp)
add_executable(set5/countbtbst.out set5/countbtbst.cpp)
add_executable(set5/isminmaxheap.out set5/isminmaxheap.cpp)
add_executable(set5/maxksum.out set5/maxksum.cpp)
add_executable(set5/leaftorootheight.out set5/leaftorootheight.cpp)
add_executable(set5/altleafsum.out set5/altleafsum.cpp)
add_executable(set5/minmaxbst.out set5/minmaxbst.cpp)

# All examples related to AVL Tree single and double rotations.
add_executable(avl/llrotate.out avl/llrotate.cpp)
add_executable(avl/rrrotate.out avl/rrrotate.cpp)
add_executable(avl/lrrotate.out avl/lrrotate.cpp)
add_executable(avl/rlrotate.out avl/rlrotate.cpp)
add_executable(avl/Example1.out avl/Example1.cpp)

# All examples related to BST BinarySearchTree.
add_executable(bst/Example1.out bst/Example1.cpp)
add_executable(bst/Example2.out bst/Example2.cpp)
add_executable(bst/Example3.out bst/Example3.cpp)
add_executable(bst/Example4.out bst/Example4.cpp)
add_executable(bst/Example5.out bst/Example5.cpp)
add_executable(bst/Example6.out bst/Example6.cpp)
add_executable(bst/Example7.out bst/Example7.cpp)
add_executable(bst/Example8.out bst/Example8.cpp)
 
# All linking section.
target_link_libraries(examples/Example1.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example2.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example3.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example4.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example5.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example6.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example7.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example8.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example9.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example10.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example11.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example12.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example13.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example14.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example15.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example16.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example17.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example18.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example19.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example20.out BinaryTree boost_iostreams)
target_link_libraries(examples/Example21.out BinaryTree boost_iostreams)

# All linking section for set1 examples.
target_link_libraries(set1/diameter.out BinaryTree boost_iostreams)
target_link_libraries(set1/sumtree.out BinaryTree boost_iostreams)
target_link_libraries(set1/levelordertraversal.out BinaryTree boost_iostreams)
target_link_libraries(set1/zigzagtraversal.out BinaryTree boost_iostreams)
target_link_libraries(set1/lca.out BinaryTree boost_iostreams)
target_link_libraries(set1/issubtree.out BinaryTree boost_iostreams)
target_link_libraries(set1/contains.out BinaryTree boost_iostreams)
target_link_libraries(set1/contains2.out BinaryTree boost_iostreams)
target_link_libraries(set1/invert.out BinaryTree boost_iostreams)
target_link_libraries(set1/symmetric.out BinaryTree boost_iostreams)
target_link_libraries(set1/reverseinorder.out BinaryTree boost_iostreams)

# All linking section for set2 examples.
target_link_libraries(set2/siblings.out BinaryTree boost_iostreams)
target_link_libraries(set2/nosiblings.out BinaryTree boost_iostreams)
target_link_libraries(set2/rootleaf.out BinaryTree boost_iostreams)
target_link_libraries(set2/cousins.out BinaryTree boost_iostreams)
target_link_libraries(set2/mindepth.out BinaryTree boost_iostreams)
target_link_libraries(set2/leftrightleafsum.out BinaryTree boost_iostreams)
target_link_libraries(set2/deepest_oddlevel_leaf.out BinaryTree boost_iostreams)
target_link_libraries(set2/largestbst.out BinaryTree boost_iostreams)
target_link_libraries(set2/bstkeyremoval.out BinaryTree boost_iostreams)
target_link_libraries(set2/removehalfnodes.out BinaryTree boost_iostreams)

# All linking section for set3 examples.
target_link_libraries(set3/topview.out BinaryTree boost_iostreams)
target_link_libraries(set3/bottomview.out BinaryTree boost_iostreams)
target_link_libraries(set3/leftview.out BinaryTree boost_iostreams)
target_link_libraries(set3/rightview.out BinaryTree boost_iostreams)
target_link_libraries(set3/periphery.out BinaryTree boost_iostreams)
target_link_libraries(set3/nonperiphery.out BinaryTree boost_iostreams)
target_link_libraries(set3/grandparents.out BinaryTree boost_iostreams)
target_link_libraries(set3/grandchildren.out BinaryTree boost_iostreams)
target_link_libraries(set3/nogpnorgc.out BinaryTree boost_iostreams)
target_link_libraries(set3/verticaltraversal.out BinaryTree boost_iostreams)

# All linking section for set4 examples.
target_link_libraries(set4/brokenbst.out BinaryTree boost_iostreams)
target_link_libraries(set4/inordersuccessor.out BinaryTree boost_iostreams)
target_link_libraries(set4/inorderpredecessor.out BinaryTree boost_iostreams)
target_link_libraries(set4/floorceil.out BinaryTree boost_iostreams)
target_link_libraries(set4/diagonalsum.out BinaryTree boost_iostreams)
target_link_libraries(set4/auxdiagonalsum.out BinaryTree boost_iostreams)
target_link_libraries(set4/descendinginorder.out BinaryTree boost_iostreams)
target_link_libraries(set4/bt2bst.out BinaryTree boost_iostreams)
target_link_libraries(set4/reverseBST.out BinaryTree boost_iostreams CyclicBarrier pthread)
target_link_libraries(set4/pathlenlessk.out BinaryTree boost_iostreams)

# All linking section for set5 examples.
target_link_libraries(set5/pathsumlessk.out BinaryTree boost_iostreams)
target_link_libraries(set5/maxwidth.out BinaryTree boost_iostreams)
target_link_libraries(set5/cornernodes.out BinaryTree boost_iostreams)
target_link_libraries(set5/rmhalfnode2fullbt.out BinaryTree boost_iostreams)
target_link_libraries(set5/sinkzeronodes.out BinaryTree boost_iostreams)
target_link_libraries(set5/iterativepreorder.out BinaryTree boost_iostreams)
target_link_libraries(set5/iterativeinorder.out BinaryTree boost_iostreams)
target_link_libraries(set5/iterativepostorder.out BinaryTree boost_iostreams)
target_link_libraries(set5/countbtbst.out BinaryTree boost_iostreams)
target_link_libraries(set5/isminmaxheap.out BinaryTree boost_iostreams)
target_link_libraries(set5/maxksum.out BinaryTree boost_iostreams)
target_link_libraries(set5/leaftorootheight.out BinaryTree boost_iostreams)
target_link_libraries(set5/altleafsum.out BinaryTree boost_iostreams)
target_link_libraries(set5/minmaxbst.out BinaryTree boost_iostreams)

# All the linking section for avl rotation examples.
target_link_libraries(avl/llrotate.out BinaryTree boost_iostreams)
target_link_libraries(avl/rrrotate.out BinaryTree boost_iostreams)
target_link_libraries(avl/lrrotate.out BinaryTree boost_iostreams)
target_link_libraries(avl/rlrotate.out BinaryTree boost_iostreams)
target_link_libraries(avl/Example1.out BinaryTree boost_iostreams)

# All the examples related to BST tree.
target_link_libraries(bst/Example1.out BinaryTree boost_iostreams)
target_link_libraries(bst/Example2.out BinaryTree boost_iostreams)
target_link_libraries(bst/Example3.out BinaryTree boost_iostreams)
target_link_libraries(bst/Example4.out BinaryTree boost_iostreams)
target_link_libraries(bst/Example5.out BinaryTree boost_iostreams)
target_link_libraries(bst/Example6.out BinaryTree boost_iostreams)
target_link_libraries(bst/Example7.out BinaryTree boost_iostreams)
target_link_libraries(bst/Example8.out BinaryTree boost_iostreams)
